// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiStackedBarChart - mouse events Should render callout correctly on mouseover 1`] = `
<div
  className=
      ms-StackedBarChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 100%;
      }
  onMouseLeave={[Function]}
>
  <div
    key="0"
  >
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone1"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Monitored
            </span>
            <div
              hidden={true}
              id="tooltip2"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Monitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone3"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Monitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              key="0"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#e81123"
                height={16}
                key="0"
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              key="1"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                key="1"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    key="1"
  >
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone4"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Unmonitored
            </span>
            <div
              hidden={true}
              id="tooltip5"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Unmonitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone6"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Unmonitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              key="0"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#0078d4"
                height={16}
                key="0"
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              key="1"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                key="1"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className=

        {
          margin-bottom: 0px;
          margin-left: 4px;
          margin-right: 0px;
          margin-top: 5px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone7"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Callout-container
        {
          position: relative;
        }
  >
    <div
      className=
          ms-Callout
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            border-radius: 2px;
            box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
            box-sizing: border-box;
            display: flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            outline: transparent;
            position: absolute;
            z-index: 1000000;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            border-color: WindowText;
            border-style: solid;
            border-width: 1px;
          }
          &::-moz-focus-inner {
            border: 0px;
          }
      data-is-focusable={false}
      hidden={false}
      id="callout0"
      style={
        Object {
          "filter": "opacity(0)",
          "opacity": 0,
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}
    >
      <div
        className=
            ms-Callout-main
            {
              background-color: #ffffff;
              border-radius: 2px;
              overflow-x: hidden;
              overflow-y: auto;
              position: relative;
              width: 100%;
            }
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="text"
        style={
          Object {
            "maxHeight": "100%",
            "outline": "none",
            "overflowY": undefined,
          }
        }
      >
        <div
          className=

              {
                background-blend-mode: normal, luminosity;
                background-color: #ffffff;
                display: grid;
                overflow: hidden;
                padding-bottom: 10px;
                padding-left: 16px;
                padding-right: 16px;
                padding-top: 11px;
              }
        >
          <div
            className=

                {
                  display: flex;
                  flex-direction: row;
                  justify-content: space-between;
                }
          >
            <div
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #605e5c;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 12px;
                    font-weight: 400;
                    line-height: 16px;
                    opacity: 0.8;
                  }
            >
               
            </div>
          </div>
          <div
            className=""
          >
            <div
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    border-left: 4px solid #e81123;
                    color: #323130;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 28px;
                    font-weight: 600;
                    line-height: 22px;
                    margin-top: unset;
                    padding-left: 8px;
                  }
            >
              <div
                className=

                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      color: #323130;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 12px;
                      font-weight: 400;
                      line-height: 16px;
                    }
              >
                2020/04/30
              </div>
              <div
                className=

                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      color: #e81123;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 28px;
                      font-weight: bold;
                      line-height: 36px;
                    }
              >
                40%
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiStackedBarChart - mouse events Should render customized callout on mouseover 1`] = `
<div
  className=
      ms-StackedBarChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 100%;
      }
  onMouseLeave={[Function]}
>
  <div
    key="0"
  >
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone1"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Monitored
            </span>
            <div
              hidden={true}
              id="tooltip2"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Monitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone3"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Monitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              key="0"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#e81123"
                height={16}
                key="0"
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              key="1"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                key="1"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    key="1"
  >
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone4"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Unmonitored
            </span>
            <div
              hidden={true}
              id="tooltip5"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Unmonitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone6"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Unmonitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              key="0"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#0078d4"
                height={16}
                key="0"
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              key="1"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                key="1"
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className=

        {
          margin-bottom: 0px;
          margin-left: 4px;
          margin-right: 0px;
          margin-top: 5px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone7"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Callout-container
        {
          position: relative;
        }
  >
    <div
      className=
          ms-Callout
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            border-radius: 2px;
            box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
            box-sizing: border-box;
            display: flex;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            outline: transparent;
            position: absolute;
            z-index: 1000000;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            border-color: WindowText;
            border-style: solid;
            border-width: 1px;
          }
          &::-moz-focus-inner {
            border: 0px;
          }
      data-is-focusable={false}
      hidden={false}
      id="callout0"
      style={
        Object {
          "filter": "opacity(0)",
          "opacity": 0,
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}
    >
      <div
        className=
            ms-Callout-main
            {
              background-color: #ffffff;
              border-radius: 2px;
              overflow-x: hidden;
              overflow-y: auto;
              position: relative;
              width: 100%;
            }
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="text"
        style={
          Object {
            "maxHeight": "100%",
            "outline": "none",
            "overflowY": undefined,
          }
        }
      >
        <div>
          <pre>
            {
  "legend": "Debit card numbers (EU and USA)",
  "data": 40,
  "color": "#e81123",
  "xAxisCalloutData": "2020/04/30",
  "yAxisCalloutData": "40%"
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiStackedBarChart snapShot testing renders MultiStackedBarChart correctly 1`] = `
<div
  className=
      ms-StackedBarChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 100%;
      }
  onMouseLeave={[Function]}
>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone1"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Monitored
            </span>
            <div
              hidden={true}
              id="tooltip2"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Monitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone3"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Monitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#e81123"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone4"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Unmonitored
            </span>
            <div
              hidden={true}
              id="tooltip5"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Unmonitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone6"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Unmonitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#0078d4"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout0"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className=

        {
          margin-bottom: 0px;
          margin-left: 4px;
          margin-right: 0px;
          margin-top: 5px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone7"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;

exports[`MultiStackedBarChart snapShot testing renders hideDenominator correctly 1`] = `
<div
  className=
      ms-StackedBarChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 100%;
      }
  onMouseLeave={[Function]}
>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone32"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Monitored
            </span>
            <div
              hidden={true}
              id="tooltip33"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Monitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone34"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Monitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout31"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#e81123"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout31"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone35"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Unmonitored
            </span>
            <div
              hidden={true}
              id="tooltip36"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Unmonitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone37"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Unmonitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout31"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#0078d4"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout31"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className=

        {
          margin-bottom: 0px;
          margin-left: 4px;
          margin-right: 0px;
          margin-top: 5px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone38"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;

exports[`MultiStackedBarChart snapShot testing renders hideLegend correctly 1`] = `
<div
  className=
      ms-StackedBarChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 100%;
      }
  onMouseLeave={[Function]}
>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone9"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Monitored
            </span>
            <div
              hidden={true}
              id="tooltip10"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Monitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone11"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Monitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout8"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#e81123"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout8"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone12"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Unmonitored
            </span>
            <div
              hidden={true}
              id="tooltip13"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Unmonitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone14"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Unmonitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout8"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#0078d4"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout8"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;

exports[`MultiStackedBarChart snapShot testing renders hideRatio correctly 1`] = `
<div
  className=
      ms-StackedBarChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 100%;
      }
  onMouseLeave={[Function]}
>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone24"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Monitored
            </span>
            <div
              hidden={true}
              id="tooltip25"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Monitored
            </div>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone26"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Monitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout23"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#e81123"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout23"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone27"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Unmonitored
            </span>
            <div
              hidden={true}
              id="tooltip28"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Unmonitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone29"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Unmonitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout23"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#0078d4"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout23"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className=

        {
          margin-bottom: 0px;
          margin-left: 4px;
          margin-right: 0px;
          margin-top: 5px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone30"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  className=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Debit card numbers (EU and USA) selected"
                    aria-posinset={1}
                    aria-selected={false}
                    aria-setsize={2}
                    className=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="option"
                  >
                    <div
                      className=

                          {
                            background-color: #e81123;
                            border-color: #e81123;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #e81123, #e81123);
                            opacity: ;
                          }
                    />
                    <div
                      className=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Debit card numbers (EU and USA)
                    </div>
                  </button>
                </div>
                <div
                  className=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Passport numbers (USA) selected"
                    aria-posinset={2}
                    aria-selected={false}
                    aria-setsize={2}
                    className=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="option"
                  >
                    <div
                      className=

                          {
                            background-color: #107c10;
                            border-color: #107c10;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #107c10, #107c10);
                            opacity: ;
                          }
                    />
                    <div
                      className=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Passport numbers (USA)
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;

exports[`MultiStackedBarChart snapShot testing renders hideTooltip correctly 1`] = `
<div
  className=
      ms-StackedBarChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 100%;
      }
  onMouseLeave={[Function]}
>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone16"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Monitored
            </span>
            <div
              hidden={true}
              id="tooltip17"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Monitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone18"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Monitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout15"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#e81123"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout15"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className=

          {
            display: flex;
            flex-direction: column;
            margin-bottom: 16px;
            width: 100%;
          }
    >
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone19"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div
          className=

              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 12px;
                font-weight: 400;
                justify-content: space-between;
                margin-bottom: 3px;
              }
        >
          <div
            className=
                ms-TooltipHost
                {
                  display: block;
                  font-weight: 700;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="none"
          >
            <span
              data-is-focusable={true}
              role="text"
            >
              Unmonitored
            </span>
            <div
              hidden={true}
              id="tooltip20"
              style={
                Object {
                  "border": 0,
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                }
              }
            >
              Unmonitored
            </div>
          </div>
          <div
            data-is-focusable={true}
            role="text"
          >
            <strong>
              40
            </strong>
            <span>
              /
              63
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone21"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
      >
        <div>
          <svg
            aria-label="Unmonitored"
            className=

                {
                  height: 16px;
                  width: 100%;
                }
          >
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout15"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#0078d4"
                height={16}
                width="63.49206349206349%"
                x="0%"
                y={0}
              />
            </g>
            <g
              aria-label="Multi stacked bar chart"
              aria-labelledby="callout15"
              className=

                  {
                    cursor: default;
                    opacity: ;
                    stroke-width: 2px;
                    stroke: #ffffff;
                  }
                  &:focus {
                    stroke-width: 2px;
                    stroke: #000000;
                  }
              data-is-focusable={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onMouseOver={[Function]}
              role="img"
            >
              <rect
                fill="#107c10"
                height={16}
                width="36.507936507936506%"
                x="63.49206349206349%"
                y={0}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className=

        {
          margin-bottom: 0px;
          margin-left: 4px;
          margin-right: 0px;
          margin-top: 5px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              aria-label="Legends"
              className=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone22"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: wrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="ms-layer"
  />
</div>
`;
